lang/macro/tests/ui/fail/C-02-constructor-self-val.stderr
error: #[ink(constructor)] functions must not have any kind of `self` receiver
  --> $DIR/C-02-constructor-self-val.rs:10:29
   |
10 |         fn invalid_self_val(self) -> Self {
   |                             ^^^^
